--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- Meta Tags -->
@@ -9,7 +9,7 @@
     <!-- Description -->
     <meta name="description" content="MegaOne is a highly creative, modern, visually stunning and Bootstrap responsive multipurpose studio and portfolio HTML5 template with ready home page demos.">
     <!-- Page Title -->
-    <title>New Agency | MegaOne HTML5 Template</title>
+    <title>赵骠</title>
     <!-- Favicon -->
     
     <!-- Bundle -->
@@ -134,8 +134,8 @@
             <div class="col-12 col-md-10 col-lg-6 offset-md-1 offset-lg-6">
                 <div class="green-box">
                     <div class="box-content">
-                        <h1 class="wow fadeInUp" data-wow-delay="1.2s">New Design Agency</h1>
-                        <h1 class="wow fadeInUp" data-wow-delay="1.6s">In Berlin</h1><br>
+                        <h1 class="wow fadeInUp" data-wow-delay="1.2s">如有一味绝境，非历十方生死。</h1>
+                        <h1 class="wow fadeInUp" data-wow-delay="1.6s">Fw刀</h1><br>
                         <a href="#services-sec" class="scroll button wow fadeInUp" data-wow-delay="2s"><i class="las la-angle-right"></i>Learn More</a>
                     </div>
                 </div>
